
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct timeval {int tv_sec; int tv_usec; } ;
typedef int fd_set ;


 int FD_SET (int,int *) ;
 int FD_ZERO (int *) ;
 int select (int,int *,int *,int *,struct timeval*) ;
 int std_err () ;

int timeout(int sock, int secs) {
    struct timeval tout;
    fd_set fd_read;
    int err;

    tout.tv_sec = secs;
    tout.tv_usec = 1000;
    FD_ZERO(&fd_read);
    FD_SET(sock, &fd_read);
    err = select(sock + 1, &fd_read, ((void*)0), ((void*)0), &tout);
    if(err < 0) std_err();
    if(!err) return(-1);
    return(0);
}
